Explanation text and question type dropdown overlapping fixes on browser scrolled

--- a/webroot/css/answer-table.css
+++ b/webroot/css/answer-table.css
@@ -179,7 +179,8 @@ span.score {
 }
 
 .serial {
-  max-width: 100px !important; 
+  max-width: 100px !important;
+  min-width: 100px !important; 
 }
 
 .class-th {
